# QuantumSynergyCore

./: LICENSE  README.md
aln-cli/: Cargo.toml
aln-cli/src/: aln_serializer.rs  commands.rs  config.rs  main.rs
aln-spec/: qsc_aln_spec.aln
contracts/: quantum_synergy_pos.aln
contracts/sgc/: SGC.sol  SGCFlashLoan.sol  SGCTreasury.sol  hardhat.config.js  package.json
infra/: Dockerfile.alncli  Dockerfile.loki  Dockerfile.pos  Dockerfile.prometheus  docker-compose.yml  loki-config.yml  prometheus.yml
pos-core/: Cargo.toml
pos-core/src/: aln_parser.rs  config.rs  db.rs  errors.rs  kafka.rs  main.rs  metrics.rs  models.rs  redis_cache.rs  router.rs  solana_client.rs  treasury.rs  web3_client.rs
scripts/: deploy_flashloan.js  deploy_sgc.js  deploy_treasury.js
src/aln/: amazon_vm.rs  fs_vfs.rs  merchant_terminal.rs  mod.rs  quantum_image_term.rs  sync_cmd.rs
src/util/: bytescale.rs
